; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_mem.c_fill16.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_mem.c_fill16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @fill16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill16(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 -2
  %8 = call i32 @AV_RN16(i32* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = shl i32 %9, 16
  %11 = load i32, i32* %5, align 4
  %12 = or i32 %11, %10
  store i32 %12, i32* %5, align 4
  br label %13

13:                                               ; preds = %16, %2
  %14 = load i32, i32* %4, align 4
  %15 = icmp sge i32 %14, 4
  br i1 %15, label %16, label %24

16:                                               ; preds = %13
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @AV_WN32(i32* %17, i32 %18)
  %20 = load i32*, i32** %3, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 4
  store i32* %21, i32** %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sub nsw i32 %22, 4
  store i32 %23, i32* %4, align 4
  br label %13

24:                                               ; preds = %13
  br label %25

25:                                               ; preds = %29, %24
  %26 = load i32, i32* %4, align 4
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* %4, align 4
  %28 = icmp ne i32 %26, 0
  br i1 %28, label %29, label %36

29:                                               ; preds = %25
  %30 = load i32*, i32** %3, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 -2
  %32 = load i32, i32* %31, align 4
  %33 = load i32*, i32** %3, align 8
  store i32 %32, i32* %33, align 4
  %34 = load i32*, i32** %3, align 8
  %35 = getelementptr inbounds i32, i32* %34, i32 1
  store i32* %35, i32** %3, align 8
  br label %25

36:                                               ; preds = %25
  ret void
}

declare dso_local i32 @AV_RN16(i32*) #1

declare dso_local i32 @AV_WN32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
